[project]
name = "lest"
version = "0.2.0"
authors = [
  { name="wchistow", email="wchistow@yandex.ru" },
]
description = "Light Python library for testing."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wchistow/lest"
"Bug Tracker" = "https://github.com/wchistow/lest/issues"
